# safestringlib

./: .gitattributes  .gitignore  Android.bp  CHANGELOG.md  CMakeLists.txt  LICENSE&COPYING.txt  Makefile.in  README.md  SECURITY.md  config.h  config.h.in  configure  configure.ac  makefile  memmove16_s.c  memmove32_s.c  strncat_s.c  version.cmake  wcscat_s.c  wmemmove_s.c
.github/workflow/: cmake.yml
.github/workflows/: cmake.yml  codeql.yml
Debug/: makefile  sources.mk
debian/: changelog  control  rules  safestringlib-dev.install  safestringlib.install
fuzz/: Makefile  build.sh  driver.c  fuzz_strisascii_s.cpp  fuzz_wcscpy_s.cpp  fuzzer.h  standalone_fuzz_target_runner.cpp
include/: safe_lib.h  safe_lib_errno.h  safe_lib_errno.h.in  safe_mem_lib.h  safe_str_lib.h  safe_types.h
safeclib/: abort_handler_s.c  ignore_handler_s.c  mem_primitives_lib.c  memcpy16_s.c  memcpy32_s.c  memcpy_s.c  memmove16_s.c  memmove32_s.c  memmove_s.c  safe_str_constraint.c  safe_str_constraint.h  safeclib_private.h  snprintf_support.c  stpcpy_s.c  stpncpy_s.c  strcasecmp_s.c  strcasestr_s.c  strcat_s.c  strcpy_s.c  strcpyfldout_s.c  strcspn_s.c  strfirstchar_s.c  strisalphanumeric_s.c  strisascii_s.c  strisdigit_s.c  strishex_s.c  strislowercase_s.c  strismixedcase_s.c  strisuppercase_s.c  strlastchar_s.c  strncat_s.c  strncpy_s.c  strnlen_s.c  strpbrk_s.c  strspn_s.c  strstr_s.c  strtok_s.c  strtolowercase_s.c  strtouppercase_s.c  wcpcpy_s.c  (+8 more)
unittests/: CMakeLists.txt  Safe_String_UnitTestMain.c  test_memcmp16_s.c  test_memcmp32_s.c  test_memcmp_s.c  test_memcpy16_s.c  test_memcpy32_s.c  test_memcpy_s.c  test_memmove16_s.c  test_memmove32_s.c  test_memmove_s.c  test_memset16_s.c  test_memset32_s.c  test_memset_s.c  test_memzero16_s.c  test_memzero32_s.c  test_memzero_s.c  test_private.h  test_stpcpy_s.c  test_stpncpy_s.c  test_strcasecmp_s.c  test_strcasestr_s.c  test_strcat_s.c  test_strcmp_s.c  test_strcmpfld_s.c  test_strcpy_s.c  test_strcpyfld_s.c  test_strcpyfldin_s.c  test_strcpyfldout_s.c  test_strcspn_s.c  test_strfirstchar_s.c  test_strfirstdiff_s.c  test_strfirstsame_s.c  test_strisalphanumeric_s.c  test_strisascii_s.c  test_strisdigit_s.c  test_strishex_s.c  test_strislowercase_s.c  test_strismixed_s.c  test_strispassword_s.c  (+28 more)
